--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
+# server.port= 8443
 spring.application.name=gvgg
 debug=true
-# Spring Security login
-spring.security.user.name=admin
-spring.security.user.password=1234
-# SQL Server
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=lacasita
-spring.datasource.username=admin    
+# SQL Server
+spring.datasource.url=jdbc:sqlserver://localhost:1433;trustServerCertificate=true;databaseName=exampledb
+spring.datasource.username=jason
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.ddl-auto=none
