--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
-# server.port= 8443
+server.port= 8443
+server.serverlet.context-path=/
 spring.application.name=gvgg
 debug=true
 
 # SQL Server
-spring.datasource.url=jdbc:sqlserver://localhost:1433;trustServerCertificate=true;databaseName=exampledb
-spring.datasource.username=jason
-spring.datasource.password=admin
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.hibernate.ddl-auto=none
+# spring.datasource.url=jdbc:sqlserver://localhost:1433;trustServerCertificate=true;databaseName=exampledb
+# spring.datasource.username=jason
+# spring.datasource.password=admin
+# spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://3.144.46.103:3306/test
+spring.datasource.username=admin
+spring.datasource.password=DataBase2025@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
