--- a/pom.xml
+++ b/pom.xml
@@ -79,10 +79,16 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- <dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
 			<version>12.4.2.jre11</version>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>jakarta.persistence</groupId>
