--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port= 8443
 server.serverlet.context-path=/
 spring.application.name=gvgg
-debug=true
+# debug=true
 
 # SQL Server
 # spring.datasource.url=jdbc:sqlserver://localhost:1433;trustServerCertificate=true;databaseName=exampledb
@@ -11,8 +11,8 @@ debug=true
 # spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://3.144.46.103:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=admin
-spring.datasource.password=DataBase2025@
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
