--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-server.port= 8443
-server.serverlet.context-path=/
+# server.port= 8443
 spring.application.name=gvgg
-# debug=true
-
 # SQL Server
 # spring.datasource.url=jdbc:sqlserver://localhost:1433;trustServerCertificate=true;databaseName=exampledb
 # spring.datasource.username=jason
@@ -10,9 +7,19 @@ spring.application.name=gvgg
 # spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 # spring.jpa.hibernate.ddl-auto=none
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=admin
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://localhost:3306/test
+# spring.datasource.username=admin
+# spring.datasource.password=admin
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.show-sql: true
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=admin
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
